this works for a single file now.

--- a/dividere.conf
+++ b/dividere.conf
@@ -1,7 +1,12 @@
 [network]
 host = "localhost"
 port = 8080
+externalurl = "http://localhost:8080"
 
 [storage]
 directory = "f"
+baseurl = "f"
 maxfilesize = 1000000
+
+[misc]
+buffersize = 10000
