finished martini port

--- a/teilomat.conf
+++ b/teilomat.conf
@@ -4,8 +4,8 @@ port = 8080
 externalurl = "http://localhost:8080"
 
 [storage]
-directory = "f"
-baseurl = "f"
+assetdirectory = "assets"
+filebasedirectory = "f"
 maxfilesize = 1000000
 
 [misc]
